--- a/service.yaml
+++ b/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: frontend-app
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
