--- a/service.yaml
+++ b/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-app-svc
+  name: print-name-svc
   labels:
-    app: frontend-app
+    app: print-name
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 9000
+      targetPort: 9000
       protocol: TCP
   selector:
-    app: frontend-app
+    app: print-name
